--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <head>
   
-  <title>RPG</title>
+  <title>School RPG</title>
+  <meta content="Embed Title" property="og:title" />
+  <meta content="^^^ Wow click this link!!!" property="og:description" />
+  <meta content="guppyadrian.github.com/SchoolRPG" property="og:url" />
+  <meta content="https://cdn3.emoji.gg/emojis/4379_cool_flushed.png" property="og:image" />
+  <meta content="#43B581" data-react-helmet="true" name="theme-color" />
   <style>
 	body {
 	background-color: grey;
