--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   
   <title>School RPG</title>
-  <meta content="Embed Title" property="og:title" />
-  <meta content="^^^ Wow click this link!!!" property="og:description" />
+  <meta content="Coolest RPG Game!" property="og:title" />
+  <meta content="This game is so awesome! You should check it out with the link above!" property="og:description" />
   <meta content="guppyadrian.github.com/SchoolRPG" property="og:url" />
   <meta content="https://cdn3.emoji.gg/emojis/4379_cool_flushed.png" property="og:image" />
   <meta content="#43B581" data-react-helmet="true" name="theme-color" />
