--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   
   <title>School RPG</title>
+  <link rel="icon" type="image/x-icon" href="./assets/coltenicon.png">
   <meta content="Coolest RPG Game!" property="og:title" />
   <meta content="This game is so awesome! You should check it out with the link above!" property="og:description" />
   <meta content="guppyadrian.github.com/SchoolRPG" property="og:url" />
