--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <body>
   <canvas id="myCanvas" width="1778" height="1000" style="border: 1px solid;"></canvas>
+  <br><button onclick="debugPlayAnim()">Play Animation</button>
   <script src="engine.js"></script>
   <script src="worlds.js"></script>
   <script src="database.js"></script>
