--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-  <canvas id="myCanvas" width="1778" height="1000" style="border: 1px solid;"></canvas>
-  <br><button onclick="debugPlayAnim()">Play Animation</button>
+  <canvas id="myCanvas" width="1778" height="1000" style="border: 1px solid; background-color: black;"></canvas>
+  <button onclick="debugPlayAnim()" style="position: absolute; top: 0;">Play Animation</button>
   <script src="engine.js"></script>
   <script src="worlds.js"></script>
   <script src="database.js"></script>
